After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667098 - ginetaddressmask leaks its address property
ginetaddressmask leaks its address property
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: network
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2012-01-01 18:01 UTC by Xan Lopez
Modified: 2012-01-01 23:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ginetaddressmaskleak.diff (2.64 KB, patch)
2012-01-01 18:02 UTC, Xan Lopez
committed Details | Review

Description Xan Lopez 2012-01-01 18:01:03 UTC
==24706== 52 bytes in 1 blocks are definitely lost in loss record 7,248 of 13,092
==24706==    at 0x4A074CD: malloc (vg_replace_malloc.c:236)
==24706==    by 0x70E9F5F: standard_malloc (gmem.c:85)
==24706==    by 0x70E9FE8: g_malloc (gmem.c:159)
==24706==    by 0x71018EC: g_slice_alloc (gslice.c:1003)
==24706==    by 0x710192B: g_slice_alloc0 (gslice.c:1029)
==24706==    by 0x7068526: g_type_create_instance (gtype.c:1872)
==24706==    by 0x705067B: g_object_constructor (gobject.c:1835)
==24706==    by 0x704FE47: g_object_newv (gobject.c:1699)
==24706==    by 0x7050612: g_object_new_valist (gobject.c:1816)
==24706==    by 0x704F894: g_object_new (gobject.c:1531)
==24706==    by 0x6F0F2F0: g_inet_address_new_from_bytes (ginetaddress.c:459)
==24706==    by 0x6F5D703: remove_network (gnetworkmonitornetlink.c:256)
==24706==    by 0x6F5DD80: read_netlink_messages (gnetworkmonitornetlink.c:386)
==24706==    by 0x6F2D5CA: socket_source_dispatch (gsocket.c:2505)
==24706==    by 0x70E1D45: g_main_dispatch (gmain.c:2513)
==24706==    by 0x70E2A06: g_main_context_dispatch (gmain.c:3050)
==24706==    by 0x70E2BE9: g_main_context_iterate (gmain.c:3121)
==24706==    by 0x70E2CAD: g_main_context_iteration (gmain.c:3182)
==24706==    by 0x6F60A05: g_application_run (gapplication.c:1599)
==24706==    by 0x42D011: main (ephy-main.c:472)
Comment 1 Xan Lopez 2012-01-01 18:02:11 UTC
Created attachment 204425 [details] [review]
ginetaddressmaskleak.diff
Comment 2 Emmanuele Bassi (:ebassi) 2012-01-01 22:18:26 UTC
Review of attachment 204425 [details] [review]:

obviously correct. happy new year, Xan. ;-)
Comment 3 Xan Lopez 2012-01-01 23:43:47 UTC
Comment on attachment 204425 [details] [review]
ginetaddressmaskleak.diff

Pushed as 00f43b22e5b5d9e4afe1eda69e348e3fdaa8c262. Happy new year!
Comment 4 Xan Lopez 2012-01-01 23:43:59 UTC
Closing.